force-app/main/default/objects/Cuti_Karyawan__c/Cuti_Karyawan__c.object-meta.xml
<CustomObject>
    <description>digunakan untuk menyimpan data cuti tahunan yang diupload oleh admin</description>
    <label>Master Cuti Karyawan</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Cuti Karyawan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>