force-app/main/default/objects/Cuti_Karyawan__c/fields/Cuti_Poin_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Poin_Karyawan__c</fullName>
    <label>Cuti &amp; Poin Karyawan</label>
    <referenceTo>Cuti_Poin_Karyawan__c</referenceTo>
    <relationshipLabel>Master Cuti Karyawan</relationshipLabel>
    <relationshipName>Cuti_Karyawan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>