force-app/main/default/objects/Cuti_Karyawan__c/fields/Cuti_Tahun_Lalu__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Tahun_Lalu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuti Tahun Lalu</label>
    <referenceTo>Cuti_Karyawan__c</referenceTo>
    <relationshipLabel>Master Cuti Karyawan</relationshipLabel>
    <relationshipName>Master_Cuti_Karyawan</relationshipName>
    <type>Lookup</type>
</CustomField>