force-app/main/default/objects/Cuti_Karyawan__c/fields/Hutang_Cuti__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Cuti__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hutang Cuti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>