force-app/main/default/objects/Cuti_Karyawan__c/fields/Quota_Cuti__c.field-meta.xml
<CustomField>
    <fullName>Quota_Cuti__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quota Cuti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>