force-app/main/default/objects/Cuti_Karyawan__c/fields/Sisa_Cuti__c.field-meta.xml
<CustomField>
    <fullName>Sisa_Cuti__c</fullName>
    <formula>(Quota_Cuti__c) - Cuti_Terpakai__c +  Hutang_Cuti__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sisa Cuti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>