force-app/main/default/objects/Cuti_Karyawan__c/fields/Tahun__c.field-meta.xml
<CustomField>
    <fullName>Tahun__c</fullName>
    <defaultValue>YEAR( TODAY() )</defaultValue>
    <label>Tahun Num</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>