force-app/main/default/objects/Cuti_Karyawan__c/fields/Tahun_Cuti__c.field-meta.xml
<CustomField>
    <fullName>Tahun_Cuti__c</fullName>
    <label>Kondisi Cuti</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tahun Ini</fullName>
            </value>
            <value>
                <fullName>Tahun Depan</fullName>
            </value>
            <value>
                <fullName>Tahun Lalu</fullName>
                <default>true</default>
                <label>Tahun Lalu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>