force-app/main/default/objects/Cuti_Karyawan__c/fields/Tahun_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tahun_Formula__c</fullName>
    <formula>TEXT(Tahun__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tahun</label>
    <type>Text</type>
</CustomField>